# tinyrender

./: Cargo.toml  index.html  package.json  tsconfig.json  webpack.config.js
js/: index.js  install.js
src/: canvas_setup.rs  lib.rs  tagimage.rs
ts/: index.ts  obj.d.ts
ts/render/: TGAImage.ts  index.ts  line.ts  triangle.ts  vertex.ts
ts/utils/: vec3.ts
ts2/: main.ts  model.ts  obj.d.ts  tga.d.ts
ts2/gl/: index.ts
ts2/shader/: index.ts
ts2/utils/: TGAImage.ts  vec2.ts  vec3.ts  vec4.ts
