[package]
authors = ["swzhxx <549909896@qq.com>"]
edition = "2018"
name = "toyrender"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
js-sys = "0.3.19"
lazy_static = "1.3.0"
nalgebra = "0.18.0"
wasm-bindgen = "0.2.44"
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
features = [
  'ImageData',
  'WebGlRenderingContext',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlUniformLocation",
]
version = "0.3.4"
